# yast-samba-provision

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  RPMNAME
.github/workflows/: ci.yml
package/: yast2-samba-provision.changes  yast2-samba-provision.spec
src/: Makefile.am
src/clients/: samba-provision.rb
src/desktop/: org.openSUSE.YaST.SambaProvision.desktop  samba-provision.desktop
src/include/samba-provision/: additional-options-widget.rb  dialogs.rb  operation-widget.rb  options-widget.rb  password-widget.rb  wizards.rb
src/modules/: SambaProvision.rb  SambaToolDomainAPI.py
